Updates to game.tsx - Added cover for DLCs that don't have one - DLC names no longer overflow - Added language supports

--- a/client/src/styles/game.css
+++ b/client/src/styles/game.css
@@ -128,8 +128,8 @@
   flex-direction: column;
 }
 
-/* Summary header */
-.summary-header {
+/* Container header */
+.container-header {
   font-family: roboto-bold-italic;
   font-size: 24px;
   margin-bottom: 6px;
@@ -181,6 +181,7 @@
   flex-direction: row;
   overflow: auto;
   gap: 10px;
+  justify-content: center;
 }
 
 /* DLC header */
@@ -196,6 +197,7 @@
   padding-bottom: 10px;
   border-radius: 5px;
   cursor: pointer;
+  width: 130px;
 }
 
 /* DLC cover art */
@@ -210,6 +212,29 @@
   font-family: oswald-bold;
   font-size: 15px;
   padding-left: 5px;
+  overflow: hidden;           
+  line-clamp: 2;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;            
+  -webkit-box-orient: vertical; 
+}
+
+/* Languages container */
+.languages-container {
+  flex-direction: column;
+}
+
+/* Language entry */
+.language-entry {
+  font-family: oswald-bold;
+  font-size: 17px;
+  margin-bottom: 4px;
+}
+
+/* Language support type */
+.support-type {
+  color: rgb(0, 213, 255);
 }
 
 /* Age ratings header */
@@ -226,7 +251,7 @@
   gap: 20px;
 }
 
-/* Individual Age rating container */
+/* Individual age rating container */
 .age-rating {
   width: 64px;
   height: 75px;
